Wooden Fluid Hopper Closes #8

--- a/src/main/resources/assets/extrahoppers/lang/en_US.lang
+++ b/src/main/resources/assets/extrahoppers/lang/en_US.lang
@@ -1,6 +1,9 @@
 tile.extrahoppers:fluid_hopper.name=Fluid Hopper
 tile.extrahoppers:fluid_hopper.tooltip=Formerly the Funnel
 tile.extrahoppers:wooden_hopper.name=Wooden Hopper
+tile.extrahoppers:wooden_fluid_hopper.name=Wooden Fluid Hopper
+
+extrahoppers.wooden_fluid_hopper.temperature=Temperature: %s%dK
 
 extrahoppers.config.gui.title=Extra Hoppers Config
 extrahoppers.config.gui.category.general=General
